--- a/inputs.anita1.conf
+++ b/inputs.anita1.conf
@@ -33,16 +33,17 @@
 ################################################################################################
 # Event input output
 ################################################################################################
-Number of neutrinos: 2000000 # How many neutrinos to generate
-Energy exponent: 19 # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
-Neutrino position: 0 # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
-Write hists and trees: 1 # 1=write to histograms and trees, 0=don't write to histograms & trees
-Write ray: 1      # 1=write to ray tree (for roughness study), 0 don't write
-Only final tree: 0     # 1=only write to final tree (for events that pass)
-Max histogram entries: 10000  # Maximum number of entries to store in histograms (10000=default).
-Random seed: 65542  # Random number seed
-Write neutrino position: 0      # Write neutrino position info to file
-Events map: 0 # (1) EVENTSMAP draw the events distribution map or (0) not
+Number of neutrinos: 200000   # How many neutrinos to generate
+Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
+Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
+Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
+Write hists and trees: 1       # 1=write to histograms and trees, 0=don't write to histograms & trees
+Write ray: 0                   # 1=write to ray tree (for roughness study), 0 don't write
+Only final tree: 0             # 1=only write to final tree (for events that pass)
+Max histogram entries: 2000000 # Maximum number of entries to store in histograms (10000=default).
+Random seed: 65546             # Random number seed
+Write neutrino position: 0     # Write neutrino position info to file
+Events map: 0                  # (1) EVENTSMAP draw the events distribution map or (0) not
 
 
 
@@ -50,13 +51,13 @@ Events map: 0 # (1) EVENTSMAP draw the events distribution map or (0) not
 # Balloon and payload
 ################################################################################################
 Which payload: 6 # Which payload:  ANITA-lite (0), Ross Payload (1), 2006-2007 flight with simple settings, Make Your Own (3), Ant Hill (4), 2006-2007 flight with Kurt measurements(6), EeVEX (one layer of antennas) (7), ANITA-II (8), ANITA-III (9), ANITA-IV (10)
-Antenna layers: 3 # How many physical layers of antennas to include.  If you indicate N, it will consider the top N layers and ignore the rest.  Useful for turning off the nadirs.  4=default
+Antenna layers: 4 # How many physical layers of antennas to include.  If you indicate N, it will consider the top N layers and ignore the rest.  Useful for turning off the nadirs.  4=default
 Inclination top three layers: 10     # Inclination angle in degrees for top three antenna layers 10=default
 Inclination fourth layer: 10     # Inclination angle in degrees for fourth layer of antennas 10=default
-Flight path: 6 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight
+Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight
 Balloon latitude: 999  # (degrees south) (999 is default position)
 Balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
-Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  1=default
+Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
 Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 
@@ -67,26 +68,26 @@ Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 ################################################################################################
 Trigger scheme: 2  # frequency domain voltage (0) frequency domain energy (1) timedomain diode integration (2) coherent sum trigger (3) summed power trigger (4)
 Band thresholds: 2.3, 2.3, 2.3, 2.3, 2.3 #thresholds for each band- this is only for the frequency domain voltage trigger.  If using a different trigger scheme then keep these at the default values of 2.3 because the max among them is used for the chance in hell cuts
-Banding: 0 # Banding (0) as in Anita-1, (1) choose your own in the next lines, (2) Anita-II, (3) satellite - indicate # of bands and % bandwidth below, (4) Anita-III
-Lower band edges: 200, 355, 525, 795, 200	#lower edge of each band
-Upper band edges: 330, 515, 775, 1165, 1165	#upper edge of each band
-Required bands: 0, 0, 0, 0, 0 #these bands are REQUIRED to be one of the channels that passes
-Allowed bands: 1, 1, 1, 1, 1 #these bands are ALLOWED to contribute to the trigger requirement
+Banding: 4 # Banding (0) as in Anita-1, (1) choose your own in the next lines, (2) Anita-II, (3) satellite - indicate # of bands and % bandwidth below, (4) Anita-III
+Lower band edges: 200, 400, 600, 600, 200	#lower edge of each band
+Upper band edges: 400, 750, 1100, 600, 1100	#upper edge of each band
+Required bands: 0, 0, 0, 0, 1 #these bands are REQUIRED to be one of the channels that passes
+Allowed bands: 0, 0, 0, 0, 1 #these bands are ALLOWED to contribute to the trigger requirement
 Number of bands: 7 # number of bands (for option 3 trigger above for satellite)
 Percent bandwidth: 10. # percent bandwidth (for option 3 trigger above for satellite)
 Notch filter limits: 0, 0 # notch filter lower and upper limits (for no filter, default is 0, 0)
-Num antenna channels for L1 trigger: 3 # number of channels on antenna to pass L1 trigger
+Num antenna channels for L1 trigger: 1 # number of channels on antenna to pass L1 trigger
 Num L1 hits to pass L2: 2  # number of L1 hits in a 'clump' to pass L2 trigger
 Num antenna for L2 trigger: 3 # number of antenna in 'clump' for L2 trigger
 Require centre antenna: 1 # require centre antenna in clump is one of those hit
 L3 trigger requirement: 1 # (1) for L3 trigger or (0) no L3 trigger requirement
-LCP/RCP or V/H: 1	# 1 for LCP and RCP, 0 for V and H
-Channels required polarization: 1, 0 # any channels passing are REQUIRED to be from this polarization
-Channels allowed polarization: 1, 0 # any channels passing are ALLOWED to be from this polarization
+LCP/RCP or V/H: 0	# 1 for LCP and RCP, 0 for V and H
+Channels required polarization: 1, 1 # any channels passing are REQUIRED to be from this polarization
+Channels allowed polarization: 1, 1 # any channels passing are ALLOWED to be from this polarization
 Exta antennas in trigger: 0 # 2=use nadirs, 1= use discones or 0= do not use discones or nadirs in the trigger
 Nadir only trigger: 0 # Implement the nadir-only trigger (require 3/3 antennas in nadir layer pass)
-ANITA-1 channel masking: 1 # implement channel masking as in anita 1 flight (1) yes or (0) no
-ANITA-2 channel masking: 0 # implement phi masking as in anita 2 flight or in anita 3 flight (1) yes or (0) no
+ANITA-1 channel masking: 0 # implement channel masking as in anita 1 flight (1) yes or (0) no
+ANITA-2 channel masking: 1 # implement phi masking as in anita 2 flight or in anita 3 flight (1) yes or (0) no
 
 
 
@@ -135,9 +136,12 @@ Flat surface: 0 # Set the normal to the surface to always be straight up. (1)  S
 Fixed ice elevation: 0 # Fixed ice elevation
 Medium: 0 # ice (0) or salt(1)
 Enable surface roughness: 0 # Include effects of surface roughness (1) or not (0)  For this, should also have the option "Skip making cuts on neutrinos we couldn't see anyway" set to 1
-Surface roughness: 1      # level of surface roughness: flatglass (0), 500 grit (1), 1000 grit (2), 1500 grit (3)
-Screen edge length [meters]: 25000
-FIRN: 1	# FIRN (1) yes or (0) no
+Surface roughness: 0.10      # set roughness scale s_rms, default (0.10)
+Screen edge length [meters]: 1000 # 
+Base screen divisions: 100 # 
+Subgrid divisions: 2 #
+Number of subgrid generations: 8 #
+FIRN: 1 # FIRN (1) yes or (0) no
 Which attenuation length: 0 #MOOREBAY (1)use Moore's Bay measured field attenuation length or (0)use South Pole measured data
 
 
@@ -172,6 +176,7 @@ Include atmosphere: 1      # include the atmosphere.  1=default
 Constant crust density: 0      # Constant crust density (2.9 g/cm^3) and thickness (40 km) (default=0)
 Constant y: 0      # whether to use constant y at 0.2 (1) yes or (0) no
 Max interaction distance: 800000.      # max distance the interaction can be from the balloon, so that it is within the horizon
+Set tau modes: 0	     # set taumodes (tau created in rock)
 
 
 
@@ -182,8 +187,8 @@ Max interaction distance: 800000.      # max distance the interaction can be fro
 Which rays: 1      # which rays to look at for each neutrino (1) direct only or (2) direct and down-going or (3) down-going only
 CreateHorizons file: 1 # Select whether or not to write a new datafile for CreateHorizons.  Note: Creating the datafile takes a long time, and the files themselves are approx. 120, 120, and 170 MB, respectively.
 Theta resolution: 0.5    # resolution on the polar angle of the signal, in degrees
-Low frequency: 200e6 # low frequency
-High frequency: 1200e6 # high frequency
+Low frequency: 200.E6 # low frequency
+High frequency: 1200.E6 # high frequency
 
 
 
@@ -195,3 +200,53 @@ SLAC horizontal distance: 13.	# horizontal distance from interaction to center o
 SLAC ice slope: 5.8 # slope of the surface of the ice at slac, in degrees
 SLAC block length: 5.02 # length of the block of ice in meters
 SLAC interaction depth: 0.7966	# depth of interaction at slac beam test (meters)
+
+
+
+################################################################################################
+# Coherent Sum Trigger settings
+################################################################################################
+Coherent power threshold: 1300	# power threshold (arbitrary units) for coherent sum trigger and summed power trigger
+
+
+
+################################################################################################
+# Settings for impulse responses
+################################################################################################
+Digitizer path impulse response: 0 # apply impulse response to digitizer path (default for Anita-3 is 1, available also for Anita-2)
+Trigger path impulse response: 0 # apply impulse response to trigger path (default for Anita-3 is 1)
+
+
+
+
+################################################################################################
+# Settings for time-dependent thresholds
+################################################################################################
+Time dependent thresholds: 0 # use time-dependent thresholds (only available for Anita-3)
+Dead time: 0 # read dead-time from flight (only available for Anita-3)
+
+
+
+################################################################################################
+# Settings for simulating thermal noise
+################################################################################################
+Digitizer noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3) for digitizer path
+Trigger noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3 and when using trigger path response) for trigger path
+Min bias: 0       # generate minimum bias sample (save events independently from the RF trigger)
+
+
+
+################################################################################################
+# Settings for trigger efficiency scan
+################################################################################################
+Efficiency scan: 0 # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
+Apply pulse at surf: 0 # Apply pulse at AMPA (0) or at SURF (1)
+Central phi-sector: 15       # Central phi sector [numbers are 1-16]
+Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when -1 no signal in those antennas)
+
+
+################################################################################################
+# Settings for TUFFs
+################################################################################################
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
+Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
