--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -33,8 +33,8 @@
 ################################################################################################
 # Event input output
 ################################################################################################
-Number of neutrinos: 2000000   # How many neutrinos to generate
-Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
+Number of neutrinos: 20000   # How many neutrinos to generate
+Energy exponent: 222            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
 Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
 Write hists and trees: 1       # 1=write to histograms and trees, 0=don't write to histograms & trees
@@ -44,7 +44,7 @@ Max histogram entries: 2000000 # Maximum number of entries to store in histogram
 Random seed: 65546             # Random number seed
 Write neutrino position: 0     # Write neutrino position info to file
 Events map: 0                  # (1) EVENTSMAP draw the events distribution map or (0) not
-
+Skip continues: 1	       # (1) skip continues so it generates everything (0) do not skip continues
 
 
 ################################################################################################
