Amy modified it so that we get the same answer with and without restricting neutrino positions.

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -33,7 +33,7 @@
 ################################################################################################
 # Event input output
 ################################################################################################
-Number of neutrinos: 200000   # How many neutrinos to generate
+Number of neutrinos: 4000000   # How many neutrinos to generate
 Energy exponent: 222            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
 Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
@@ -44,7 +44,7 @@ Max histogram entries: 2000000 # Maximum number of entries to store in histogram
 Random seed: 65546             # Random number seed
 Write neutrino position: 0     # Write neutrino position info to file
 Events map: 0                  # (1) EVENTSMAP draw the events distribution map or (0) not
-Skip continues: 1	       # (1) skip continues so it generates everything (0) do not skip continues
+Skip continues: 0	       # (1) skip continues so it generates everything (0) do not skip continues
 
 
 ################################################################################################
@@ -156,7 +156,7 @@ Theta_th factor: 1. # For checking code is working:  multiply theta_th by this f
 Chance in hell factor: 1. # For checking code is working:  loosen the chance in hell cut by this much.  1=default
 Skip neutrinos: 0      # Skip making cuts on neutrinos we couldn't see anyway.  (Will slow down program, used for generating plots or debugging.)
 Restrict neutrino directions: 0      # (1) restrict or (0) do not restrict neutrino directions to giving viewing angle close to cerenkov angle   0=default.
-Restrict neutrino positions: 1 # (1) restrict or (0) do not restrict neutrino positions to be within the horizon of the balloon   1=default.
+Restrict neutrino positions: 0 # (1) restrict or (0) do not restrict neutrino positions to be within the horizon of the balloon   1=default.
 Weight on absorption: 1      # 1=use weight on absorption, 0=not use weight on absorption
 Phi points banana: 720    # Number of points scanned across the "phi" (azimuthal) coordinate for a banana plot. (only used with "balloon position" 3)
 Theta points banana: 180    # Number of points scanned across the "theta" (polar) coordinate for a banana plot. (only used with "balloon position" 3)
