Add an icemc2 binary, which will be massively edited...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,8 @@ macro(add_binary bin)
   target_link_libraries(${bin} icemc_objs ${LIBS})
 endmacro() 
 
-add_binary(icemc) 
+add_binary(icemc)
+add_binary(icemc2)
 add_binary(testTrigger) 
 add_binary(testSettings) 
 add_binary(testEAS) 
