--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ endmacro()
 
 add_binary(icemc)
 add_binary(icemc2)
+add_binary(icemc3)
 add_binary(testTrigger) 
 add_binary(testSettings) 
 add_binary(testEAS) 
