Add possibility of string variables to icemc::Settings

--- a/config/inputs.anita3.conf
+++ b/config/inputs.anita3.conf
@@ -20,6 +20,12 @@
 # Variables can contain contain any number of elements so long as they are comma separated
 #     arrayVariable: 0, 1, 2, 3, 4
 #
+# String variables (and arrays) are now possible, like so
+#     StringVariable: "Looks like this"
+#     StringArray: "First", "Second", "Third"
+# The surrounding quotations are removed during parsing and escape characters might even
+# get replaced, i.e. \t becomes a tab.
+#
 # Finally, since settings are parsed by name and not file position, remember that if you
 # want to change a setting name you need to change the corresponding entry in Settings.cc
 # and recompile.
