--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.10)
 project(icemc)
-set(libname "IceMC")
+set(libname "AnitaIceMC")
 
 ### Site-specific options
 
