--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -144,7 +144,7 @@ Screen step size [meters]: 2
 FIRN: 1 # FIRN (1) yes or (0) no
 Which attenuation length: 0 #MOOREBAY (1)use Moore's Bay measured field attenuation length or (0)use South Pole measured data
 Use Specific Interaction Location:  0 # 1 to require neutrinos to interact near a specific place (with below options) 
-Specific Interaction Location:  -77.7,166.7,0 # Lon Lat Alt (m) of a specific place you want neutrinos to interact near
+Specific Interaction Location:  -77.7,166.7,0 # Lat Lon Alt (m) of a specific place you want neutrinos to interact near
 Specific Interaction Location Maximum Distance: 100000 # maximum cartesian distance (in m) from specific place you want neutrinos to interact near
 
 
