Constify the AskaryanFreqsGenerator by removing a spectator variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,7 +150,7 @@ macro(add_binary bin)
 endmacro() 
 
 add_binary(icemc)
-add_binary(icemc3)
+add_binary(nicemc)
 add_binary(testSettings) 
 add_binary(testEAS) 
 add_binary(testWAIS) 
