inputs for anita 1, 2, and 4 changed to have setting for source, and it should be set to 0 by default, keith check that it is set to 0

--- a/inputs.anita1.conf
+++ b/inputs.anita1.conf
@@ -176,6 +176,14 @@ Max interaction distance: 800000.      # max distance the interaction can be fro
 
 
 ################################################################################################
+# For source searches
+################################################################################################
+Get neutrino direction from specified source: 0 # Use direction of neutrino from source (1) or not (0) 
+
+
+
+
+################################################################################################
 # General simulation settings
 ################################################################################################
 
