--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -179,6 +179,14 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 
 
 
+
+################################################################################################
+# For source searches
+################################################################################################
+Get neutrino direction from specified source: 0 # Use direction of neutrino from source (1) or not (0) 
+
+
+
 ################################################################################################
 # General simulation settings
 ################################################################################################
