Remove all old binary scripts so we can annihilate the class APIs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,10 +149,10 @@ macro(add_binary bin)
   target_link_libraries(${bin} ${LIBS} ${libname})
 endmacro() 
 
-add_binary(icemc)
+# add_binary(icemc)
 add_binary(nicemc)
 add_binary(testSettings) 
-add_binary(testEAS) 
-add_binary(testWAIS) 
-add_binary(testThermalNoise)
+# add_binary(testEAS) 
+# add_binary(testWAIS) 
+# add_binary(testThermalNoise)
 add_binary(testInputAfterAntenna)
