Attempt to make NFOUR and HALFNFOUR actually configurable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,4 +155,4 @@ add_binary(testSettings)
 # add_binary(testEAS) 
 # add_binary(testWAIS) 
 # add_binary(testThermalNoise)
-add_binary(testInputAfterAntenna)
+# add_binary(testInputAfterAntenna)
