--- a/config/anita3.refactor.conf
+++ b/config/anita3.refactor.conf
@@ -196,7 +196,7 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 Which rays: 1      # which rays to look at for each neutrino (1) direct only or (2) direct and down-going or (3) down-going only
 CreateHorizons file: 1 # Select whether or not to write a new datafile for CreateHorizons.  Note: Creating the datafile takes a long time, and the files themselves are approx. 120, 120, and 170 MB, respectively.
 Theta resolution: 0.5    # resolution on the polar angle of the signal, in degrees
-Low frequency: 200.E6 #0.E6 # low frequency (Hz)
+Low frequency: 0.E6 # 200.E6 #0.E6 # low frequency (Hz)
 High frequency: 1300.E6 # high frequency (Hz)
 
 
