Add boolian flag to make applyConstantGroupDelay non-circular
I also fixed a case in FTPair initializiation in which
doNormalOrdering() wouldn't say that the frequency domain was
dirty. It does now.

Also: correct the FlightPath enum names!

--- a/config/anita3.refactor.conf
+++ b/config/anita3.refactor.conf
@@ -60,7 +60,7 @@ Which payload: 9 # Which payload:  ANITA-lite (0), Ross Payload (1), 2006-2007 f
 Antenna layers: 4 # How many physical layers of antennas to include.  If you indicate N, it will consider the top N layers and ignore the rest.  Useful for turning off the nadirs.  4=default
 Inclination top three layers: 10     # Inclination angle in degrees for top three antenna layers 10=default
 Inclination fourth layer: 10     # Inclination angle in degrees for fourth layer of antennas 10=default
-Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight
+Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight (9) Anita4 flight 
 Balloon latitude: 999  # (degrees south) (999 is default position)
 Balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
 Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
