Add enum classes for NuFlavor and CurrentType in Primaries
Boresights is somewhat broken!

--- a/config/anita3.refactor.conf
+++ b/config/anita3.refactor.conf
@@ -127,7 +127,7 @@ E-field factor: 1. # For systematics studies:  multiply Jaime's E-field by this 
 Thermal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
 Disable polarization vectors: 0 # Disable use of polarization vectors.  (For debugging purposes.)
 Use pulser spectrum: 0 # (1) use pulser spectrum instead of signal spectrum or (0) use signal spectra as normal - this is more making signal efficiency curves only!
-Centre one phi-sector: 0 # (0) normal or (1) centre one phi sector of the payload on the incoming signal
+# Centre one phi-sector: 0 # (0) normal or (1) centre one phi sector of the payload on the incoming signal
 Force vertical polarization: 0 # (0) normal or (1) force signal to hit payload with vertical polarisation
 
 
@@ -168,7 +168,7 @@ Phi points banana: 720    # Number of points scanned across the "phi" (azimuthal
 Theta points banana: 180    # Number of points scanned across the "theta" (polar) coordinate for a banana plot. (only used with "balloon position" 3)
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
-Loop over boresights: 1      # loop over boresights
+Loop over boresights: 0      # loop over boresights
 
 
 
