--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,7 +176,8 @@ endmacro()
 
 # add_binary(icemc)
 add_binary(nicemc)
-add_binary(testSettings) 
+add_binary(testSettings)
+add_binary(testCrust) 
 # add_binary(testEAS) 
 # add_binary(testWAIS) 
 # add_binary(testThermalNoise)
