--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.10)
+cmake_minimum_required(VERSION 3.1.0)
 project(icemc)
 set(libname "AnitaIceMC")
 
@@ -19,32 +19,7 @@ include(${ROOT_USE_FILE})
 
 include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include)
 
-
-message("cmake_cxx_flags = ${CMAKE_CXX_FLAGS}")
-
-string(FIND ${CMAKE_CXX_FLAGS} "-std=" NEED_SET_CPP_FLAGS)
-if(${NEED_SET_CPP_FLAGS} EQUAL -1)
-  if(CMAKE_COMPILER_IS_GNUCC)
-    message(${CMAKE_CXX_COMPILER_VERSION})
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.5.0 OR CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.5.0)
-      message(" -std=c++11 ") 
-      add_definitions(-std=c++11)
-    else()
-      ##DRAGONS BE HERE
-      add_definitions(-Dconstexpr=const)
-      message(" -std=c++0x ")
-      add_definitions(-std=c++0x)
-    endif()
-  endif()
-endif()
-
-
-#string(FIND ${CMAKE_CXX_FLAGS} "-std=c++1" USE_MODERN_CPP)
-#if(${USE_MODERN_CPP} EQUAL -1)
-#  ##DRAGONS BE HERE
-#  add_definitions(-Dconstexpr=const)
-#endif()
-
+set (CMAKE_CXX_STANDARD 11)
 
 FILE (GLOB SOURCE_FILES "src/*.cc")
 FILE (GLOB INCLUDE_FILES "include/*h") 
