Update input files

--- a/inputs.anita4_trigEffScan.conf
+++ b/inputs.anita4_trigEffScan.conf
@@ -117,7 +117,7 @@ Zero signal: 0	# zero the signal to measure noise hits
 Random rotation polarization: 0	# randomize rotation of polarization around ray arrival direction at thepayload by a gaussian with width x degrees (0 = no randomisation)
 LPM effect: 1 # Turn on (1) and off (0) the LPM effect 1=default
 E-field factor: 1. # For systematics studies:  multiply Jaime's E-field by this factor.  1=default
-Thermal noise factor: 0.9 # For systematics studies:  multiply the thermal noise by this factor.  1=default
+Thermal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
 Disable polarization vectors: 0 # Disable use of polarization vectors.  (For debugging purposes.)
 Use pulser spectrum: 0 # (1) use pulser spectrum instead of signal spectrum or (0) use signal spectra as normal - this is more making signal efficiency curves only!
 Centre one phi-sector: 0 # (0) normal or (1) centre one phi sector of the payload on the incoming signal
@@ -245,9 +245,9 @@ Add CW: 0                      # add CW
 ################################################################################################
 Efficiency scan: 1                        # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
 Apply pulse at surf: 0                    # Apply pulse at AMPA (0) or at SURF (1)
-Central phi-sector: 11                    # Central phi sector [numbers are 1-16]
-Off-axis attenuation: 0, -26, -25, -26, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when 999 no signal in those antennas)
+Central phi-sector: 11                   # Central phi sector [numbers are 1-16]
+Off-axis attenuation: 0, -32, -30, -32, 0    # Attenuation applied to central phi sectors and the two adjecent ones (when 999 no signal in those antennas)
 Phi-sectors delays: 0, 0, 0, 0, 0        # Additional delays added to each phi sectors
 Rings used: 1, 1, 1                      # Which rings are used in this scan (T, M, B)
-Ring delays to phi: 0, 0, 0, 0, 0        # Apply ring delays to which phi sectors
+Ring delays to phi: 0, 0, 0, 0, 0        # Apply ring delays to which phi sectors 
 Ring delays: 0, 0, 0                     # Additional delays between T-M, M-B, T-B
