Restore old version of ShowerGenerator to test changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,7 +152,8 @@ endmacro()
 # add_binary(icemc)
 add_binary(nicemc)
 add_binary(testSettings)
-add_binary(testCrust) 
+add_binary(testCrust)
+add_binary(testShower)
 # add_binary(testEAS) 
 # add_binary(testWAIS) 
 # add_binary(testThermalNoise)
