--- a/config/anita3.refactor.conf
+++ b/config/anita3.refactor.conf
@@ -123,7 +123,7 @@ Add noise to signal: 1 # Add noise fluctuations to the signal. 0=no or 1=yes=def
 Zero signal: 0	# zero the signal to measure noise hits
 Random rotation polarization: 0	# randomize rotation of polarization around ray arrival direction at thepayload by a gaussian with width x degrees (0 = no randomisation)
 LPM effect: 1 # Turn on (1) and off (0) the LPM effect 1=default
-E-field factor: 1000000. # For systematics studies:  multiply Jaime's E-field by this factor.  1=default
+E-field factor: 10. # For systematics studies:  multiply Jaime's E-field by this factor.  1=default
 Thermal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
 Disable polarization vectors: 0 # Disable use of polarization vectors.  (For debugging purposes.)
 Use pulser spectrum: 0 # (1) use pulser spectrum instead of signal spectrum or (0) use signal spectra as normal - this is more making signal efficiency curves only!
@@ -241,7 +241,7 @@ Dead time: 0 # read dead-time from flight (only available for Anita-3)
 ################################################################################################
 Digitizer noise from flight: 1       # generate thermal noise using flight data (only available for Anita-3) for digitizer path
 Trigger noise from flight: 1       # generate thermal noise using flight data (only available for Anita-3 and when using trigger path response) for trigger path
-Min bias: 1       # generate minimum bias sample (save events independently from the RF trigger)
+Min bias: 0       # generate minimum bias sample (save events independently from the RF trigger)
 
 
 
