Change TUFFSON flag to TUFFSTATUS flag to distinguish the case in which there are no tuffs, and the case in which the tuff filters are all off

--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -244,8 +244,8 @@ Min bias: 0       # generate minimum bias sample (save events independently from
 ################################################################################################
 # Settings for TUFFs
 ################################################################################################
-Simulate TUFFs: 1              # simulate the TUFF notches for the whole flight
-Which TUFFs are on: 1, 1, 0    # which TUFF filters are on for the whole flight
+Simulate TUFFs: 1              # simulate the TUFF notches for the whole flight (0: no tuffs, 1: tuffs on, 2: tuffs off, 3: tuffs as Butterworth filters)
+Which TUFFs are on: 1, 1, 0    # Butterworth filter simulation (only valid if above is 3)
 Add CW: 0                      # add CW
 
 ################################################################################################
