--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -263,6 +263,6 @@ Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sec
 ################################################################################################
 # Settings for TUFFs
 ################################################################################################
-Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
-Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight (0: no tuffs, 1: tuffs on, 2: tuffs off, 3: tuffs as Butterworth filters)
+Which TUFFs are on: 0, 0, 0    # Butterworth filter simulation (only valid if above is 3)
 Add CW: 0                      # add CW
