add cut on weights

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -180,6 +180,7 @@ Constant crust density: 0      # Constant crust density (2.9 g/cm^3) and thickne
 Constant y: 0      # whether to use constant y at 0.2 (1) yes or (0) no
 Max interaction distance: 800000.      # max distance the interaction can be from the balloon, so that it is within the horizon
 Set tau modes: 0	     # set taumodes (tau created in rock)
+Minimum weight: 1e-10  # The smallest allowed weight
 
 
 
