add new setting params

--- a/inputs.anita3.blazar.conf
+++ b/inputs.anita3.blazar.conf
@@ -163,8 +163,8 @@ Theta points banana: 180    # Number of points scanned across the "theta" (polar
 Signal across frequencies: 0      # Make signal across frequencies for different viewing angles
 Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
-
-
+Ignore Cross-Pol: 0 # For ignoring the cross-polarization component. Added to run sim without warnings.
+Polarization Sign Hack: 1 # Include hack to acquire the right sign of e/h. Added to run sim without warnings.
 
 
 ################################################################################################
